# tournoiRust

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.scss
src/: app.rs  main.rs
src/app/: add_team_to_team.rs  addteam_to_poule.rs  capped_input_component.rs  is_in_list_team.rs  list.rs  list_component.rs  list_random_team.rs  list_team_component.rs  poule_component.rs
src/app/list_component/: task_team.rs
