[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Cargo.toml
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-cli-support = "0.2.83"
wasm-bindgen-futures = "0.4.33"
gloo-net = "0.4.0"
web-sys = "0.3.64"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
yew-router = "0.17.0"
log = "0.4"
wasm-logger = "0.2.0"
trunk = "0.17.5"
reqwest = "0.11"



[package.metadata.trunk]
host = "127.0.0.1"
port = 8080

